# ComfyUI-LLMs-Toolkit

./: .env.example  .gitignore  CHANGELOG.md  README.md  README_CN.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
config/: default_providers.json
docs/: llm_config_usage.md  llm_translator_guide.md  troubleshooting.md
nodes/: api_client.py  api_routes.py  image_processor.py  json_builder.py  json_extractor.py  json_fixer.py  llm_loader.py  llm_translator.py  openai_compatible.py  text_nodes.py
src/core/: llm_loader.py  openai_compatible.py
src/processors/: image_processor.py
tests/: test_api.py
web/css/: provider_manager.css
web/js/: display_tokens.js  json_builder.js  provider_manager.js
