[project]
name = "llms-toolkit"
description = "A professional-grade toolkit providing lightweight APIs to integrate leading Large Language Models (LLMs) including DeepSeek, Qwen and GPT directly into ComfyUI."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["Pillow", "aiohttp"]

[project.urls]
Repository = "https://github.com/HuangYuChuh/ComfyUI-LLMs-Toolkit"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/HuangYuChuh/ComfyUI-LLMs-Toolkit/wiki"
"Bug Tracker" = "https://github.com/HuangYuChuh/ComfyUI-LLMs-Toolkit/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-LLMs-Toolkit"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

